# vango

./: .gitignore  README.md  compile.sh  run.sh  run2.sh
assets/autocanvas/: primroses.yaml
assets/autostyles/: forest_creek.yaml  sunset.yaml
assets/canvas/: snow.yaml  test.yaml  test1.yaml  test2.yaml  treesdrama2.yaml
assets/styles/: airplane_sky.yaml  boat.yaml  buda_castle1.yaml  butterfly.yaml  columbia2.yaml  pointillism.yaml  test.yaml  test2.yaml  testpoint.yaml
cmake/: Common.cmake
include/canvas/: BackgroundLayer.cpp  BackgroundLayer.h  Brushstroke.cpp  Brushstroke.h  CMakeLists.txt  Canvas.cpp  Canvas.h  ColorUtils.h  Layer.cpp  Layer.h  Style.cpp  Style.h
process/: CMakeLists.txt  README.md
process/src/: Processor.cpp  Processor.h  canvas  process.cpp
render/: CMakeLists.txt  README.md  render.cpp
render/src/: Renderer.cpp  Renderer.h  render.cpp
